--- a/index.htm
+++ b/index.htm
@@ -9,40 +9,42 @@
   <link rel="manifest" href="manifest.json">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
   <style>
-    :root{--navy:#0B1F3B;--gold:#FFD700;--white:#FFFFFF;--red:#C8102E;--gray:#f4f4f4;}
-    *{margin:0;padding:0;box-sizing:border-box;}
-    body{font-family:'Roboto',sans-serif;background:var(--gray);color:#222;line-height:1.6;}
-    img{max-width:100%;}
-    a{color:inherit;text-decoration:none;}
-    header{background:var(--navy);position:sticky;top:0;z-index:1000;box-shadow:0 2px 6px rgba(0,0,0,.25);}
-    .head-inner{max-width:1200px;margin:auto;display:flex;align-items:center;justify-content:space-between;padding:.75rem 1rem;}
-    .logo{display:flex;align-items:center;gap:.75rem;color:var(--white);font-family:'Bebas Neue',cursive;font-size:1.6rem;letter-spacing:1px;}
-    .logo img{height:52px;}
-    nav ul{list-style:none;display:flex;gap:1.2rem;}
-    nav a{color:var(--white);font-weight:700;font-size:.95rem;transition:color .2s;}
-    nav a:hover{color:var(--gold);}
-    #menu-toggle{display:none;font-size:1.8rem;color:var(--white);cursor:pointer;}
-    main{min-height:80vh;}
-    section{display:none;animation:fade .4s;}
-    @keyframes fade{from{opacity:0}to{opacity:1}}
-    section.active{display:block}
-    .hero{height:70vh;background:url('PDP14SpeedAd.png') center/cover no-repeat;position:relative;display:flex;align-items:center;justify-content:center;text-align:center;color:var(--white);}
-    .hero::after{content:'';position:absolute;inset:0;background:rgba(11,31,59,.72);}
-    .hero-content{position:relative;z-index:2;max-width:800px;padding:1rem;}
-    .hero h1{font-family:'Bebas Neue',cursive;font-size:clamp(2.2rem,5vw,4rem);letter-spacing:2px;margin-bottom:.5rem;text-transform:uppercase;}
-    .hero p{font-size:1.1rem;margin-bottom:1.5rem;}
-    .btn{background:var(--gold);color:var(--navy);padding:.85rem 1.8rem;border-radius:4px;font-weight:700;display:inline-block;transition:background .2s;}
-    .btn:hover{background:#e6c200;}
-    .grid{display:grid;gap:1.2rem;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));}
-    .card{background:var(--white);border-top:5px solid var(--gold);padding:1.5rem 1.2rem;border-radius:6px;box-shadow:0 4px 12px rgba(0,0,0,.08);}
-    .rank-table{width:100%;border-collapse:collapse;margin-top:1rem;}
-    .rank-table th,.rank-table td{padding:.75rem;border:1px solid #ccc;text-align:left;}
-    .rank-table th{background:var(--navy);color:var(--white);}
-    footer{background:var(--navy);color:var(--white);text-align:center;padding:2rem 1rem 1rem;margin-top:4rem;}
-    footer img{height:90px;margin-bottom:.5rem;}
-    .footer-links{display:flex;gap:1.2rem;justify-content:center;margin:1rem 0;flex-wrap:wrap;font-size:.9rem;}
-    .footer-links a:hover{color:var(--gold);}
-    small{display:block;margin-top:1rem;font-size:.8rem;opacity:.7;}
+    :root { --navy: #0B1F3B; --gold: #FFD700; --white: #FFFFFF; --red: #C8102E; --gray: #f4f4f4f4; }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: 'Roboto', sans-serif; background: var(--gray); color: #222; line-height: 1.6; }
+    img { max-width: 100%; }
+    a { color: inherit; text-decoration: none; }
+    header { background: var(--navy); position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 6px rgba(0,0,0,0,.25); }
+    .head-inner { max-width: 1200px; margin: auto; display: flex; align-items: center; justify-content: space-between; padding: .75rem 1rem; }
+    .logo { display: flex; align-items: center; gap: .75rem; color: var(--white); font-family: 'Bebas Neue', cursive; font-size: 1.6rem; letter-spacing: 1px; }
+    .logo img { height: 52px; }
+    nav ul { list-style: none; display: flex; gap: 1.2rem; }
+    nav a { color: var(--white); font-weight: 700; font-size: .95rem; transition: color .2s; }
+    nav a:hover { color: var(--gold); }
+    #menu-toggle { display: none; font-size: 1.8rem; color: var(--white); cursor: pointer; }
+    main { min-height: 80vh; }
+    section { display: none; animation: fade .4s; }
+    @keyframes fade { from { opacity: 0 } to { opacity: 1 } }
+    section.active { display: block }
+    .hero { height: 70vh; background: url('ZONE ONE.png') center/cover no-repeat; position: relative; display: flex; align-items: center; justify-content: center; text-align: center; color: var(--white); }
+    .hero::after { content: ''; position: absolute; inset: 0; background: rgba(11,31,59,.72); }
+    .hero-content { position: relative; z-index: 2; max-width: 800px; padding: 1rem; }
+    .hero h1 { font-family: 'Bebas Neue', cursive; font-size: clamp(2.2rem,5vw,4rem); letter-spacing: 2px; margin-bottom: .5rem; text-transform: uppercase; }
+    .hero p { font-size: 1.1rem; margin-bottom: 1.5rem; }
+    .btn { background: var(--gold); color: var(--navy); padding: .85rem 1.8rem; border-radius: 4px; font-weight: 700; display: inline-block; transition: background .2s; }
+    .btn:hover { background: #e6c200; }
+    .grid { display: grid; gap: 1.2rem; grid-template-columns: repeat(auto-fit,minmax(250px,1fr)); }
+    .card { background: var(--white); border-top: 5px solid var(--gold); padding: 1.5rem 1.2rem; border-radius: 6px; box-shadow: 0 4px 12px rgba(0,0,0,.08); }
+    .rank-table { width: 100%; border-collapse: collapse; margin-top: 1rem; }
+    .rank-table th, .rank-table td { padding: .75rem; border: 1px solid #ccc; text-align: left; }
+    .rank-table th { background: var(--navy); color: var(--white); }
+    .zone-map { width: 100%; height: auto; border: 2px solid var(--navy); }
+    .avatar { width: 100px; border-radius: 50%; border: 3px solid var(--gold); }
+    footer { background: var(--navy); color: var(--white); text-align: center; padding: 2rem 1rem 1rem; margin-top: 4rem; }
+    footer img { height: 90px; margin-bottom: .5rem; }
+    .footer-links { display: flex; gap: 1.2rem; justify-content: center; margin: 1rem 0; flex-wrap: wrap; font-size: .9rem; }
+    .footer-links a:hover { color: var(--gold); }
+    small { display: block; margin-top: 1rem; font-size: .8rem; opacity: .7; }
     @media(max-width:768px){
       nav ul{flex-direction:column;background:var(--navy);position:absolute;top:60px;left:0;width:100%;max-height:0;overflow:hidden;transition:max-height .3s;}
       nav ul.open{max-height:400px;padding:.5rem 0;}
@@ -61,9 +63,11 @@
       <nav>
         <ul id="nav-ul">
           <li><a href="#" onclick="show('home')">Home</a></li>
+          <li><a href="#" onclick="show('recruit')">Recruitment</a></li>
           <li><a href="#" onclick="show('ranks')">Ranks</a></li>
           <li><a href="#" onclick="show('zones')">Patrol Zones</a></li>
           <li><a href="#" onclick="show('handbook')">Handbook</a></li>
+          <li><a href="#" onclick="show('cmd')">Command</a></li>
           <li><a href="#" onclick="show('contact')">Contact</a></li>
         </ul>
       </nav>
@@ -77,120 +81,11 @@
         <div class="hero-content">
           <h1 id="rotate-headline">NO SPEEDING IN OUR DISTRICT</h1>
           <p>Professional patrol. Community trust. State of Firestone pride.</p>
-          <a class="btn" href="#" onclick="show('ranks')">Explore Ranks</a>
+          <a class="btn" href="#" onclick="show('recruit')">Start Your Career</a>
         </div>
       </div>
       <div class="grid container" style="max-width:1200px;margin:-50px auto 0;padding:0 1rem;position:relative;z-index:3;">
         <div class="card"><i class="fas fa-user-plus" style="font-size:2rem;color:var(--navy);margin-bottom:.5rem;"></i><h3>Join PDP</h3><p>Application centre, exam schedule, academy info.</p></div>
         <div class="card"><i class="fas fa-book" style="font-size:2rem;color:var(--navy);margin-bottom:.5rem;"></i><h3>Laws & Codes</h3><p>Quick-reference penal code, 10-codes, traffic guide.</p></div>
         <div class="card"><i class="fas fa-map-marked-alt" style="font-size:2rem;color:var(--navy);margin-bottom:.5rem;"></i><h3>Patrol Zones</h3><p>Interactive map of Prominence, hotspots, speed traps.</p></div>
-        <div class="card"><i class="fas fa-users-cog" style="font-size:2rem;color:var(--navy);margin-bottom:.5rem;"></i><h3>Command Staff</h3><p>Meet the High Command team and unit supervisors.</p></div>
-      </div>
-    </section>
-
-    <!-- RANKS -->
-    <section id="ranks">
-      <div class="container" style="max-width:1000px;margin:auto;padding:2rem 1rem;">
-        <h2 style="font-family:'Bebas Neue',cursive;font-size:2.5rem;">Rank & Promotion Guide</h2>
-        <table class="rank-table">
-          <thead><tr><th>Insignia</th><th>Rank</th><th>Duties</th><th>Promotion Requirement</th></tr></thead>
-          <tbody>
-            <tr><td>🟫</td><td>Officer</td><td>Patrol, traffic, reports</td><td>Entry level</td></tr>
-            <tr><td>🟨</td><td>Corporal</td><td>FTO, senior patrol</td><td>30 days + 60 tickets + exam</td></tr>
-            <tr><td>🟧</td><td>Sergeant</td><td>Shift supervisor</td><td>60 days + leadership course</td></tr>
-            <tr><td>🟥</td><td>Lieutenant</td><td>Platoon leader</td><td>HQ selection board</td></tr>
-            <tr><td>🔴</td><td>Captain</td><td>Bureau command</td><td>Appointed by Chief</td></tr>
-            <tr><td>⚫</td><td>Deputy Chief</td><td>Department operations</td><td>Appointed by Chief</td></tr>
-            <tr><td>🟡</td><td>Chief</td><td>Overall leadership</td><td>Appointed by Governor</td></tr>
-          </tbody>
-        </table>
-      </div>
-    </section>
-
-    <!-- PATROL ZONES -->
-    <section id="zones">
-      <div class="container" style="max-width:1100px;margin:auto;padding:2rem 1rem;">
-        <h2 style="font-family:'Bebas Neue',cursive;font-size:2.5rem;">Patrol Zones & Hotspots</h2>
-        <img src="PDP14SpeedAd.png" alt="Prominence map" class="zone-map">
-        <div class="grid" style="margin-top:1.5rem;">
-          <div class="card"><h4>Zone 1 – Business District</h4><p>High-rise offices, bank, city hall. Frequent traffic collisions at intersection by bank.</p></div>
-          <div class="card"><h4>Zone 2 – Prominence Ville</h4><p>Suburban housing, school zone (20 mph), park. Watch for speeders during school hours.</p></div>
-          <div class="card"><h4>Zone 3 – Highway 14</h4><p>Major arterial, 55 mph limit. Use radar gun at mile-marker 4 overpass.</p></div>
-          <div class="card"><h4>Zone 4 – Industrial</h4><p>Warehouses, fuel depot. Night-time burglaries reported; check doors hourly.</p></div>
-        </div>
-      </div>
-    </section>
-
-    <!-- HANDBOOK -->
-    <section id="handbook">
-      <div class="container" style="max-width:900px;margin:auto;padding:2rem 1rem;">
-        <h2 style="font-family:'Bebas Neue',cursive;font-size:2.5rem;">Policy Handbook</h2>
-        <button onclick="window.print()" style="float:right;margin-bottom:1rem;">🖨 Print</button>
-        <h4>10-CODE QUICK CARD</h4>
-        <div class="grid" style="grid-template-columns:repeat(auto-fit,minmax(150px,1fr));font-size:.95rem;">
-          <div class="card">10-4 Acknowledge</div><div class="card">10-8 In Service</div><div class="card">10-15 Subject in Custody</div>
-          <div class="card">10-20 Location</div><div class="card">10-23 Arrived on Scene</div><div class="card">10-42 End Tour</div>
-        </div>
-        <h4>TRAFFIC STOP – 7 STEP</h4>
-        <ol style="margin-left:1.2rem;">
-          <li>Select safe location, signal driver to curb.</li>
-          <li>Run plate & warrant check before exit.</li>
-          <li>Approach left-rear, greet & identify.</li>
-          <li>State reason for stop.</li>
-          <li>Request docs (license, registration).</li>
-          <li>Use discretion: cite, warn, or arrest.</li>
-          <li>Clear scene, log in CAD.</li>
-        </ol>
-        <h4>USE-OF-FORCE CONTINUUM</h4>
-        <p>Officer Presence → Verbal → Soft Control → Hard Control → Intermediate Weapons → Deadly Force</p>
-        <h4>ROBLOX-SPECIFIC RULES</h4>
-        <ul>
-          <li>Always wear uniform shirt & badge while on-duty.</li>
-          <li>Do not abuse sirens (limit 5 seconds at traffic light).</li>
-          <li>Respect FRP reports – provide body-cam if requested.</li>
-        </ul>
-      </div>
-    </section>
-
-    <!-- CONTACT -->
-    <section id="contact">
-      <div class="container" style="max-width:800px;margin:auto;padding:2rem 1rem;">
-        <h2 style="font-family:'Bebas Neue',cursive;font-size:2.5rem;">Contact Us</h2>
-        <div class="grid">
-          <div class="card"><h4>Emergency</h4><p>Dial 911 in-game or <strong>;911</strong> in radio.</p></div>
-          <div class="card"><h4>Non-Emergency</h4><p>Roblox group wall<br>Discord #citizen-reports</p></div>
-          <div class="card"><h4>Recruitment Questions</h4><p>Discord: <code>RecruitBOT#1234</code><br>Message a Corporal+ in-game.</p></div>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <!-- ==========  MANDATORY  ROUTER  ========== -->
-  <script>
-    console.log('[PDP] Router loaded');          // visual confirmation in F12
-    function show(id){
-      document.querySelectorAll('section').forEach(s=>s.classList.remove('active'));
-      const target = document.getElementById(id);
-      if(!target){ console.warn('[PDP] No section with id',id); return;}
-      target.classList.add('active');
-      window.scrollTo({top:0,behavior:'smooth'});
-      if(window.innerWidth <= 768) toggleNav('close');
-    }
-    function toggleNav(action){
-      const ul = document.getElementById('nav-ul');
-      if(!ul) return;
-      if(action === 'close') ul.classList.remove('open');
-      else ul.classList.toggle('open');
-    }
-    // footer year
-    document.getElementById('yr').textContent = new Date().getFullYear();
-    // headline rotator
-    const headlines = ["NO SPEEDING IN OUR DISTRICT","PROTECTING PROMINENCE TOGETHER","YOUR SAFETY IS OUR MISSION"];
-    let idx = 0;
-    setInterval(()=>{
-      idx = (idx + 1) % headlines.length;
-      document.getElementById('rotate-headline').textContent = headlines[idx];
-    },4000);
-  </script>
-</body>
-</html>
+        <div class="card"><i class="fas fa-users-cog" style="font-size:2rem;color:var(--navy);margin-bottom:.5rem;"></i><h3>Command Staff</h3><p>Meet the High Command team and unit supervisors.</p></
