--- a/index.htm
+++ b/index.htm
@@ -9,42 +9,42 @@
   <link rel="manifest" href="manifest.json">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
   <style>
-    :root { --navy: #0B1F3B; --gold: #FFD700; --white: #FFFFFF; --red: #C8102E; --gray: #f4f4f4f4; }
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Roboto', sans-serif; background: var(--gray); color: #222; line-height: 1.6; }
-    img { max-width: 100%; }
-    a { color: inherit; text-decoration: none; }
-    header { background: var(--navy); position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 6px rgba(0,0,0,0,.25); }
-    .head-inner { max-width: 1200px; margin: auto; display: flex; align-items: center; justify-content: space-between; padding: .75rem 1rem; }
-    .logo { display: flex; align-items: center; gap: .75rem; color: var(--white); font-family: 'Bebas Neue', cursive; font-size: 1.6rem; letter-spacing: 1px; }
-    .logo img { height: 52px; }
-    nav ul { list-style: none; display: flex; gap: 1.2rem; }
-    nav a { color: var(--white); font-weight: 700; font-size: .95rem; transition: color .2s; }
-    nav a:hover { color: var(--gold); }
-    #menu-toggle { display: none; font-size: 1.8rem; color: var(--white); cursor: pointer; }
-    main { min-height: 80vh; }
-    section { display: none; animation: fade .4s; }
-    @keyframes fade { from { opacity: 0 } to { opacity: 1 } }
-    section.active { display: block }
-    .hero { height: 70vh; background: url('ZONE ONE.png') center/cover no-repeat; position: relative; display: flex; align-items: center; justify-content: center; text-align: center; color: var(--white); }
-    .hero::after { content: ''; position: absolute; inset: 0; background: rgba(11,31,59,.72); }
-    .hero-content { position: relative; z-index: 2; max-width: 800px; padding: 1rem; }
-    .hero h1 { font-family: 'Bebas Neue', cursive; font-size: clamp(2.2rem,5vw,4rem); letter-spacing: 2px; margin-bottom: .5rem; text-transform: uppercase; }
-    .hero p { font-size: 1.1rem; margin-bottom: 1.5rem; }
-    .btn { background: var(--gold); color: var(--navy); padding: .85rem 1.8rem; border-radius: 4px; font-weight: 700; display: inline-block; transition: background .2s; }
-    .btn:hover { background: #e6c200; }
-    .grid { display: grid; gap: 1.2rem; grid-template-columns: repeat(auto-fit,minmax(250px,1fr)); }
-    .card { background: var(--white); border-top: 5px solid var(--gold); padding: 1.5rem 1.2rem; border-radius: 6px; box-shadow: 0 4px 12px rgba(0,0,0,.08); }
-    .rank-table { width: 100%; border-collapse: collapse; margin-top: 1rem; }
-    .rank-table th, .rank-table td { padding: .75rem; border: 1px solid #ccc; text-align: left; }
-    .rank-table th { background: var(--navy); color: var(--white); }
-    .zone-map { width: 100%; height: auto; border: 2px solid var(--navy); }
-    .avatar { width: 100px; border-radius: 50%; border: 3px solid var(--gold); }
-    footer { background: var(--navy); color: var(--white); text-align: center; padding: 2rem 1rem 1rem; margin-top: 4rem; }
-    footer img { height: 90px; margin-bottom: .5rem; }
-    .footer-links { display: flex; gap: 1.2rem; justify-content: center; margin: 1rem 0; flex-wrap: wrap; font-size: .9rem; }
-    .footer-links a:hover { color: var(--gold); }
-    small { display: block; margin-top: 1rem; font-size: .8rem; opacity: .7; }
+    :root{--navy:#0B1F3B;--gold:#FFD700;--white:#FFFFFF;--red:#C8102E;--gray:#f4f4f4f4;}
+    *{margin:0;padding:0;box-sizing:border-box;}
+    body{font-family:'Roboto',sans-serif;background:var(--gray);color:#222;line-height:1.6;}
+    img{max-width:100%;}
+    a{color:inherit;text-decoration:none;}
+    header{background:var(--navy);position:sticky;top:0;z-index:1000;box-shadow:0 2px 6px rgba(0,0,0,.25);}
+    .head-inner{max-width:1200px;margin:auto;display:flex;align-items:center;justify-content:space-between;padding:.75rem 1rem;}
+    .logo{display:flex;align-items:center;gap:.75rem;color:var(--white);font-family:'Bebas Neue',cursive;font-size:1.6rem;letter-spacing:1px;}
+    .logo img{height:52px;}
+    nav ul{list-style:none;display:flex;gap:1.2rem;}
+    nav a{color:var(--white);font-weight:700;font-size:.95rem;transition:color .2s;}
+    nav a:hover{color:var(--gold);}
+    #menu-toggle{display:none;font-size:1.8rem;color:var(--white);cursor:pointer;}
+    main{min-height:80vh;}
+    section{display:none;animation:fade .4s;}
+    @keyframes fade{from{opacity:0}to{opacity:1}}
+    section.active{display:block}
+    .hero{height:70vh;background:url('ZONE ONE.png') center/cover no-repeat;position:relative;display:flex;align-items:center;justify-content:center;text-align:center;color:var(--white);}
+    .hero::after{content:'';position:absolute;inset:0;background:rgba(11,31,59,.72);}
+    .hero-content{position:relative;z-index:2;max-width:800px;padding:1rem;}
+    .hero h1{font-family:'Bebas Neue',cursive;font-size:clamp(2.2rem,5vw,4rem);letter-spacing:2px;margin-bottom:.5rem;text-transform:uppercase;}
+    .hero p{font-size:1.1rem;margin-bottom:1.5rem;}
+    .btn{background:var(--gold);color:var(--navy);padding:.85rem 1.8rem;border-radius:4px;font-weight:700;display:inline-block;transition:background .2s;}
+    .btn:hover{background:#e6c200;}
+    .grid{display:grid;gap:1.2rem;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));}
+    .card{background:var(--white);border-top:5px solid var(--gold);padding:1.5rem 1.2rem;border-radius:6px;box-shadow:0 4px 12px rgba(0,0,0,.08);}
+    .rank-table{width:100%;border-collapse:collapse;margin-top:1rem;}
+    .rank-table th,.rank-table td{padding:.75rem;border:1px solid #ccc;text-align:left;}
+    .rank-table th{background:var(--navy);color:var(--white);}
+    .zone-map{width:100%;height:auto;border:2px solid var(--navy);}
+    .avatar{width:100px;border-radius:50%;border:3px solid var(--gold);}
+    footer{background:var(--navy);color:var(--white);text-align:center;padding:2rem 1rem 1rem;margin-top:4rem;}
+    footer img{height:90px;margin-bottom:.5rem;}
+    .footer-links{display:flex;gap:1.2rem;justify-content:center;margin:1rem 0;flex-wrap:wrap;font-size:.9rem;}
+    .footer-links a:hover{color:var(--gold);}
+    small{display:block;margin-top:1rem;font-size:.8rem;opacity:.7;}
     @media(max-width:768px){
       nav ul{flex-direction:column;background:var(--navy);position:absolute;top:60px;left:0;width:100%;max-height:0;overflow:hidden;transition:max-height .3s;}
       nav ul.open{max-height:400px;padding:.5rem 0;}
@@ -56,7 +56,7 @@
   <header>
     <div class="head-inner">
       <a class="logo" href="#" onclick="show('home')">
-        <img src="Emblem.png" alt="PDP Emblem">
+        <img src="blem.png" alt="PDP Emblem">
         <span>Prominence District Police</span>
       </a>
       <span id="menu-toggle" onclick="toggleNav()">&#9776;</span>
@@ -88,4 +88,21 @@
         <div class="card"><i class="fas fa-user-plus" style="font-size:2rem;color:var(--navy);margin-bottom:.5rem;"></i><h3>Join PDP</h3><p>Application centre, exam schedule, academy info.</p></div>
         <div class="card"><i class="fas fa-book" style="font-size:2rem;color:var(--navy);margin-bottom:.5rem;"></i><h3>Laws & Codes</h3><p>Quick-reference penal code, 10-codes, traffic guide.</p></div>
         <div class="card"><i class="fas fa-map-marked-alt" style="font-size:2rem;color:var(--navy);margin-bottom:.5rem;"></i><h3>Patrol Zones</h3><p>Interactive map of Prominence, hotspots, speed traps.</p></div>
-        <div class="card"><i class="fas fa-users-cog" style="font-size:2rem;color:var(--navy);margin-bottom:.5rem;"></i><h3>Command Staff</h3><p>Meet the High Command team and unit supervisors.</p></
+        <div class="card"><i class="fas fa-users-cog" style="font-size:2rem;color:var(--navy);margin-bottom:.5rem;"></i><h3>Command Staff</h3><p>Meet the High Command team and unit supervisors.</p></div>
+      </div>
+    </section>
+
+    <!-- RECRUITMENT -->
+    <section id="recruit">
+      <div class="container" style="max-width:900px;margin:auto;padding:2rem 1rem;">
+        <h2 style="font-family:'Bebas Neue',cursive;font-size:2.5rem;">Recruitment & Exams</h2>
+        <h4>1. Requirements</h4>
+        <ul>
+          <li>13+ yrs old with working microphone</li>
+          <li>≥ 5 hr playtime in Stapleton County</li>
+          <li>Clean moderation history across Firestone groups</li>
+          <li>Pass 30-45 min academy session</li>
+        </ul>
+        <h4>2. Application Steps</h4>
+        <ol>
+          <li>Click “Apply on Roblox”
