--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
   <link rel="manifest" href="manifest.json">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
   <style>
-    :root{--navy:#0B1F3B;--gold:#FFD700;--white:#FFFFFF;--red:#C8102E;--gray:#f4f4f4f4;}
+    :root{--navy:#0B1F3B;--gold:#FFD700;--white:#FFFFFF;--red:#C8102E;--gray:#f4f4f4f;}
     *{margin:0;padding:0;box-sizing:border-box;}
     body{font-family:'Roboto',sans-serif;background:var(--gray);color:#222;line-height:1.6;}
     img{max-width:100%;}
@@ -92,17 +92,11 @@
       </div>
     </section>
 
-    <!-- RECRUITMENT -->
-    <section id="recruit">
-      <div class="container" style="max-width:900px;margin:auto;padding:2rem 1rem;">
-        <h2 style="font-family:'Bebas Neue',cursive;font-size:2.5rem;">Recruitment & Exams</h2>
-        <h4>1. Requirements</h4>
-        <ul>
-          <li>13+ yrs old with working microphone</li>
-          <li>≥ 5 hr playtime in Stapleton County</li>
-          <li>Clean moderation history across Firestone groups</li>
-          <li>Pass 30-45 min academy session</li>
-        </ul>
-        <h4>2. Application Steps</h4>
-        <ol>
-          <li>Click “Apply on Roblox”
+    <!-- RECRANKS -->
+    <section id="ranks">
+      <div class="container" style="max-width:1000px;margin:auto;padding:2rem 1rem;">
+        <h2 style="font-family:'Bebas Neue',cursive;font-size:2.5rem;">Rank & Promotion Guide</h2>
+        <table class="rank-table">
+          <thead><tr><th>Insignia</th><th>Rank</th><th>Duties</th><th>Promotion Requirement</th></tr></thead>
+          <tbody>
+            <tr><td>🟫
